--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,900;1,100;1,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Aladin&display=swap');
 
 * {
   box-sizing: border-box;
@@ -20,7 +21,6 @@ body {
 h1,
 h2,
 h3,
-h4,
 p,
 a,
 ul,
@@ -34,36 +34,55 @@ footer {
   background-color: #1f2937;
 }
 
+.btn {
+  background-color: #3882f6;
+  border: none;
+  border-radius: 5px;
+  padding: 8px 25px;
+  color: #f9faf8;
+}
+
 /* hero */
-.hero {
+.hero-flex {
   height: 100vh;
 }
+
 nav {
   display: flex;
   align-items: center;
   height: 10%;
-  outline: 1px solid whitesmoke;
 }
 
 ul {
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 li {
-  list-style: none;
+  list-style: none; 
+  padding: 0 30px;
+}
+
+li:first-of-type {
+  margin-right: auto;
+  padding-left: 0;
+}
+
+li:last-of-type {
+  padding-right: 0;
 }
 
 a {
   color: #e5e7eb;
   display: inline-block;
   font-size: 18px;
-  padding: 1em;
   text-decoration: none;
 }
 
 #logo {
-  margin-right: auto;
+  color: #f9faf8;
+  font-size: 24px;
 }
 
 main {
@@ -74,7 +93,7 @@ main {
 }
 
 .main-text {
-  width: 48%;
+  width: 45%;
 }
 
 .main-text h1 {
@@ -85,6 +104,7 @@ main {
 .main-text p {
   font-size: 18px;
   color: #e5e7eb;
+  margin: 20px 0 40px;
 }
 
 .main-img {
