--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,900;1,100;1,700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Aladin&display=swap');
 
 * {
   box-sizing: border-box;
@@ -104,6 +103,7 @@ main {
 .main-text p {
   font-size: 18px;
   color: #e5e7eb;
+  line-height: 1.4;
   margin: 20px 0 40px;
 }
 
@@ -115,6 +115,8 @@ main {
   width: 50%;
   min-width: 250px;
 }
+
+
 /* sections */
 section {
   padding: 30px;
@@ -126,5 +128,64 @@ h3 {
 }
 
 h2 {
+  color: #1f2937;
+  font-size: 35px;
+  font-weight: 900;
   text-align: center;
+}
+
+/* info section */
+
+#about{
+  display: flex;
+  justify-content: center;
+}
+
+.info-section {
+  display: flex;
+  gap: 35px;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  align-items: center;
+}
+
+.info-img {
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+  height: 150px;
+  width: 250px;
+}
+
+.dragon-img {
+  background-image: url(images/dragons-breath-ale.jpg);
+}
+
+.unicorn-img {
+  background-image: url(images/unicorn-delight-lager.jpg);
+}
+
+.goblin-img {
+  background-image: url(images/goblin-grog-stout.jpg);
+}
+
+.mermaid-img {
+  background-image: url(images/mermaid-wheat-beer.jpg);
+}
+
+.info-text {
+  color: #4b5363;
+}
+
+.brew {
+  font-weight: bold;
+}
+
+/* testimonial section */
+#testimonial {
+  background-color: #e5e7eb;
 }
