--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,8 @@ h3,
 p,
 a,
 ul,
-li {
+li,
+blockquote {
   padding: 0;
   margin: 0;
 }
@@ -82,6 +83,8 @@ a {
 #logo {
   color: #f9faf8;
   font-size: 24px;
+  font-weight: 800;
+  text-transform: uppercase;
 }
 
 main {
@@ -118,18 +121,18 @@ main {
 
 /* sections */
 section {
-  padding: 30px;
+  padding: 50px;
 }
 
-h2,
-h3 {
-  padding-bottom: 30px;
+h3{
+ padding-bottom: 10px; 
 }
 
 h2 {
   color: #1f2937;
   font-size: 35px;
   font-weight: 900;
+  padding-bottom: 30px;
   text-align: center;
 }
 
@@ -194,6 +197,7 @@ blockquote {
   font-style: italic;
   font-weight: 100;
   color: #1f2937;
+  padding: 50px;
 }
 
 .cite {
@@ -202,4 +206,31 @@ blockquote {
   font-weight: 400;
   padding-top: 15px;
   text-align: right;
+}
+
+/* Sign up section */
+.cta {
+  background-color: #3882f6;
+  border-radius: 10px;
+  color: #f9faf8;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 30px 80px;
+}
+
+.cta-text {
+  margin-right: auto;
+  width: 80%;
+}
+
+.btn-outline {
+  border: 1px solid #f9faf8;
+}
+
+/* footer */
+footer {
+  color: #f9faf8;
+  padding: 30px;
+  text-align: center;
 }
